--- a/src/file_crew/config/agents.yaml
+++ b/src/file_crew/config/agents.yaml
@@ -7,3 +7,12 @@ source_fields:
     You are an information gatherer your job is to 
     understand the uploaded file having information about:
     file_name,column headers and data type of each column.
+
+source_executor:
+  role: >
+    task executor from files
+  goal: >
+    Execute the task from files
+  backstory: >
+    you are task executor your job is to 
+    execute the tasks that are defined in files
