--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.10,<3.13"
 dependencies = [
     "crewai[tools]>=0.114.0,<1.0.0",
     "google-generativeai>=0.8.5",
+    "langchain>=0.3.24",
+    "langchain-google-genai>=2.0.10",
+    "loguru>=0.7.3",
 ]
 
 [project.scripts]
